# rmcp-server-kit

./: .gitignore  .gitlab-ci.yml  .taplo.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  RUST_GUIDELINES.md  SECURITY.md
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
benches/: rbac_redaction.rs
docs/: ARCHITECTURE.md  CODE_REVIEW.md  GUIDE.md  MIGRATION.md  MINDMAP.md  RELEASING.md  RUST_1_95_NOTES.md
examples/: oauth_server.rs
scripts/: check-bench-threshold.ps1  check-bench-threshold.sh
src/: admin.rs  auth.rs  bounded_limiter.rs  cancel.rs  config.rs  error.rs  forwarded.rs  lib.rs  metrics.rs  mtls_revocation.rs  oauth.rs  observability.rs  rbac.rs  ssrf.rs  ssrf_resolver.rs  tool_hooks.rs  transport.rs
supply-chain/: config.toml
tests/: crl_discovery_ratelimit.rs  crl_map_bounds.rs  crl_ssrf.rs  docs_citations.rs  e2e.rs  e2e_oauth_mtls.rs  jwks_key_cap.rs  jwks_redirect_ssrf.rs  oauth_http_client.rs  oauth_url_validation.rs  properties.rs  ssrf_resolver.rs
